--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-
+  "bin": {
+    "generate": "./index.js"
+  },
   "type": "module",
   "author": "",
   "license": "ISC",
